<resources>
    <string name="app_name">App Development - PA5</string>
    <string name="points">Points:</string>
    <string name="time">Time:</string>
    <string name="gameState">Press START to Start</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="pointScore">0</string>
    <string name="timerSec">0</string>
    <string name="button00"> </string>
    <string name="button01"> </string>
    <string name="button02"> </string>
    <string name="button03"> </string>
    <string name="button10"> </string>
    <string name="button11"> </string>
    <string name="button12"> </string>
    <string name="button13"> </string>
    <string name="button20"> </string>
    <string name="button21"> </string>
    <string name="button22"> </string>
    <string name="button23"> </string>
    <string name="button30"> </string>
    <string name="button31"> </string>
    <string name="button32"> </string>
    <string name="button33"> </string>
    <string name="submit">Submit</string>
    <string name="contentDescription00">button00</string>
    <string name="contentDescription01">button01</string>
    <string name="contentDescription02">button02</string>
    <string name="contentDescription03">button03</string>
    <string name="contentDescription10">button10</string>
    <string name="contentDescription11">button11</string>
    <string name="contentDescription12">button12</string>
    <string name="contentDescription13">button13</string>
    <string name="contentDescription20">button20</string>
    <string name="contentDescription21">button21</string>
    <string name="contentDescription22">button22</string>
    <string name="contentDescription23">button23</string>
    <string name="contentDescription30">button30</string>
    <string name="contentDescription31">button31</string>
    <string name="contentDescription32">button32</string>
    <string name="contentDescription33">button33</string>
</resources>