<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/points"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/countPointsTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countPointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pointScore"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pointsTextView"
        app:layout_constraintStart_toEndOf="@id/pointsTextView"
        app:layout_constraintTop_toTopOf="@+id/pointsTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/countPointsTextView"
        app:layout_constraintEnd_toStartOf="@id/timerTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/countPointsTextView"
        app:layout_constraintTop_toTopOf="@+id/countPointsTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/timerSec"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gameStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:text="@string/gameState"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsTextView" />

    <Button
        android:id="@+id/button00"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:enabled="false"
        android:text="@string/button00"
        android:contentDescription="@string/contentDescription00"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameStateTextView" />

    <Button
        android:id="@+id/button01"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button01"
        android:contentDescription="@string/contentDescription01"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button00"
        app:layout_constraintEnd_toStartOf="@+id/button02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button00"
        app:layout_constraintTop_toTopOf="@+id/button00"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button02"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button02"
        android:contentDescription="@string/contentDescription02"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button01"
        app:layout_constraintEnd_toStartOf="@id/button03"
        app:layout_constraintStart_toEndOf="@+id/button01"
        app:layout_constraintTop_toTopOf="@+id/button01"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button03"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/button03"
        android:contentDescription="@string/contentDescription03"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button02"
        app:layout_constraintTop_toTopOf="@+id/button02"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/button10"
        android:contentDescription="@string/contentDescription10"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button00" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button11"
        android:contentDescription="@string/contentDescription11"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button12"
        android:contentDescription="@string/contentDescription12"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@id/button13"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="@+id/button11"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/button13"
        android:contentDescription="@string/contentDescription13"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toTopOf="@+id/button12"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/button20"
        android:contentDescription="@string/contentDescription20"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button30"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button21"
        android:contentDescription="@string/contentDescription21"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toTopOf="@+id/button20"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button22"
        android:contentDescription="@string/contentDescription22"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button21"
        app:layout_constraintEnd_toStartOf="@id/button23"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toTopOf="@+id/button21"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/button23"
        android:contentDescription="@string/contentDescription23"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button30"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button30"
        android:contentDescription="@string/contentDescription30"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button31"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button31"
        android:contentDescription="@string/contentDescription31"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button30"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toTopOf="@+id/button30"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button32"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button32"
        android:contentDescription="@string/contentDescription32"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@id/button33"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toTopOf="@+id/button31"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button33"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/button33"
        android:contentDescription="@string/contentDescription33"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button30" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="6dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmit"
        app:layout_constraintStart_toEndOf="@id/buttonStart"
        app:layout_constraintTop_toTopOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="4dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toTopOf="@+id/buttonClear"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>